force-app/main/default/objects/Doctor__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>