force-app/main/default/objects/Doctor__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Cardiology</fullName><default>false</default><label>Cardiology</label></value>
            <value><fullName>Orthopedic</fullName><default>false</default><label>Orthopedic</label></value>
            <value><fullName>Ophthalmology</fullName><default>false</default><label>Ophthalmology</label></value>
            <value><fullName>General Medicine</fullName><default>false</default><label>General Medicine</label></value>
            <value><fullName>Surgery</fullName><default>false</default><label>Surgery</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>